# MMSE_CPP

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: cd.yml  ci.yml
.husky/: pre-commit
bench/: mmse_bench.cpp  mmse_channel_budget.cpp  mmse_cuda_profile.cpp  pdcch_benchmark_fixture.h  pdcch_decode_bench.cpp  pdcch_gpu_decode_bench.cpp  pdcch_module_demo.cpp  pdcch_ncu_workload.cpp  pdcch_pdsch_handoff_demo.cpp
cmake/: MMSE_CPPConfig.cmake.in
docs/: README.md  lte_dci_and_ce_mmse_reference.md  lte_equalized_channel_sdk_interface.md  lte_mmse_budget_report_2026-07-01.md  lte_pdcch_complete_flow.md  lte_pdcch_pdsch_channel_decode_overview.md  mmse_algorithm_and_optimization_guide.md  mmse_cuda_profile_report_2026-06-24.md  mmse_cuda_profile_report_2026-07-03.md  mmse_equalizer_tdd.md  pbch_chain_sdk_quick_start.md  pcfich_chain_sdk_quick_start_api_reference.md  pdcch_chain_sdk_api_reference.md  pdcch_chain_sdk_interface.md  pdcch_chain_sdk_quick_start.md  pdcch_chain_sdk_versioning_policy.md  pdcch_cpu_gpu_performance_analysis_2026-07-14.md  pdcch_module_api_example.md  pdcch_pdsch_handoff_sdk_v1.md  pdsch_llr_downstream_quick_start_api_reference.md
figures/: lte-downlink-full-chain.tex  lte-pdcch-main-flow.tex  mmse-cpp-pdcch-pdsch-code-flow.tex  pdcch-decode-flow.tex
include/mmse/: constants.h  lte_chain_sdk.h  lte_descrambling.h  lte_pdsch_transport.h  lte_soft_demod.h  mmse_equalizer.h  pbch_chain_dto.h  pbch_module_api.h  pcfich_chain_dto.h  pcfich_module_api.h  pdcch_chain_dto.h  pdcch_chain_sdk.h  pdcch_module_api.h  pdcch_pdsch_handoff.h  pdsch_chain_dto.h  pdsch_module_api.h  types.h
outputs/: pdcch_compact_baseline_2026_07_14.ncu-rep  pdcch_compact_optimized_2026_07_14.ncu-rep  pdcch_crc_baseline_2026_07_14.ncu-rep  pdcch_crc_optimized_2026_07_14.ncu-rep  pdcch_gpu_memory_2026_07_15.txt  pdcch_rate_recovery_baseline_2026_07_14.ncu-rep  pdcch_rate_recovery_optimized_2026_07_14.ncu-rep  pdcch_viterbi_baseline_2026_07_14.ncu-rep  pdcch_viterbi_optimized_2026_07_14.ncu-rep
outputs/pdcch_1rx_performance_2026_07_16/: cpu_1tx_1rx_run_1.txt  cpu_1tx_1rx_run_2.txt  cpu_1tx_1rx_run_3.txt  cpu_2tx_1rx_run_1.txt  cpu_2tx_1rx_run_2.txt  cpu_2tx_1rx_run_3.txt  cpu_median_summary.csv  cpu_runs.csv  gpu_1rx_sweep_run_1.txt  gpu_1rx_sweep_run_2.txt  gpu_1rx_sweep_run_3.txt  gpu_median_summary.csv
outputs/pdcch_4tx_performance_2026_07_16/: cpu_4tx_run_1.txt  cpu_4tx_run_2.txt  cpu_4tx_run_3.txt  gpu_4tx_sweep_run_1.txt  gpu_4tx_sweep_run_2.txt  gpu_4tx_sweep_run_3.txt
outputs/pdcch_fixed_performance_2026_07_16/: cpu_fixed_run_1.txt  cpu_fixed_run_2.txt  cpu_fixed_run_3.txt  fixed_median_summary.csv  gpu_fixed_sweep_run_1.txt  gpu_fixed_sweep_run_2.txt  gpu_fixed_sweep_run_3.txt  gpu_throughput_medians.csv  resources.json  system_info.txt
scripts/: create_release_bundle.py  deploy_bundle.py  precommit_smoke.py  run_clang_format.py
src/: mmse_avx2.cpp  mmse_cuda_runtime.cu  mmse_cuda_runtime_stub.cpp  mmse_equalizer_cpu.cpp  mmse_equalizer_gpu.cpp  pdcch_tail_biting_decoder.cpp  thread_pool.cpp
src/internal/: mmse_cuda_runtime.h  mmse_internal.h
tests/: mmse_tests.cpp
